# yamlfix

./: .cruft.json  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .safety-policy.yml  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  question.md
.github/workflows/: build.yml  install.yml  tests.yml  update.yml
adr/adr/: index.html
contributing/: index.html
docs/: contributing.md  editor_integration.md  index.md  reference.md  requirements.in  requirements.txt
docs/adr/: adr.md
docs/examples/: fix_code.py
docs/stylesheets/: links.css
editor_integration/: index.html
examples/: simple-example.py
reference/: index.html
search/: search_index.json
src/yamlfix/: __init__.py  adapters.py  config.py  model.py  services.py  util.py  version.py
src/yamlfix/adapters/: __init__.py
src/yamlfix/entrypoints/: __init__.py  cli.py
src/yamlfix/model/: __init__.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/unit/: test_adapter_yaml.py  test_cli_cache.py  test_services.py  test_version.py
