# --------- Commitizen -------------

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.0"
tag_format = "$version"
version_files = [
    "src/yamlfix/version.py",
]

# --------- Black -------------

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

# --------- Pytest -------------

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv --tb=short -n auto"
python_paths = "."
testpaths = "tests"
norecursedirs = [
    ".tox",
    ".git",
    "*/migrations/*",
    "*/static/*",
    "docs",
    "venv",
    "*/yamlfix/*"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "secondary: mark tests that use functionality tested in the same file (deselect with '-m \"not secondary\"')"
]

# --------- Coverage -------------

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    'pragma: no cover',

    # Ignore the Abstract classes definition
    'raise NotImplementedError',
]

# --------- Isort -------------

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

# --------- Flakehell -------------

[tool.flakehell]
format = "grouped"
max_line_length = 88
show_source = true
docstring-convention = "google"
extended_default_ignore=[]  # Until https://github.com/flakehell/flakehell/issues/10 is solved

[tool.flakehell.plugins]
flake8-aaa = ["+*"]
flake8-annotations = [
  "+*",
  "-ANN101", # There is usually no need to type the self argument of class methods.
  "-ANN102", # There is usually no need to type the cls argument of class methods.
]
flake8-annotations-complexity = ["+*"]
flake8-bugbear = ["+*"]
flake8-comprehensions = ["+*"]
flake8-debugger = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-expression-complexity = ["+*"]
flake8-fixme = ["+*"]
flake8-markdown = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest = ["+*"]
flake8-pytest-style = ["+*"]
flake8-simplify = ["+*"]
flake8-use-fstring = [
  "+*",
  '-FS003' # f-string missing prefix
]
flake8-typing-imports = [
  "+*",
  "-TYP001", # guard import by `if False:  # TYPE_CHECKING`: TYPE_CHECKING (not in
             #   3.5.0, 3.5.1). We don't support Python < 3.6
]
flake8-variables-names = ["+*"]
dlint = ["+*"]
pylint = [
  "+*",
  "-C0411", # %s should be placed before %s,
            # see https://github.com/PyCQA/pylint/issues/2175 and https://github.com/PyCQA/pylint/issues/1797
  "-W1203", # Use %s formatting in logging functions. Deprecated rule in favor of
            # f-strings.
  "-W1201", # Use lazy % formatting in logging functions. Deprecated rule in favor of
            # f-strings.
  "-C0301", # Lines too long. Already covered by E501.
]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = [
  "+*",
  "-W503", # No longer applies, incompatible with newer version of PEP8
           # see https://github.com/PyCQA/pycodestyle/issues/197
           # and https://github.com/psf/black/issues/113
]
pyflakes = ["+*"]

[tool.flakehell.exceptions."tests/"]
flake8-docstrings = [
  "-D400", # First line should end with a period
  "-D205"  # 1 blank line required between summary line and description
]
flake8-annotations = [
  "-ANN001"
]
pylint = [
  "-R0201", # Method could be a function. Raised because the methods of a test class
            # don't use the self object, which is not wrong.
]

[tool.flakehell.exceptions."tests/factories.py"]
pylint = [
  "-R0903", # Too few methods warning, but is the way to define factoryboy factories.
]

[tool.flakehell.exceptions."tests/unit/test_views.py"]
pycodestyle = [
  "-E501", # lines too long. As we are testing the output of the terminal, the test is
           # cleaner if we show the actual result without splitting long lines.
]

# --------- Pylint -------------
[tool.pylint.'TYPECHECK']
generated-members = "sh"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

# --------- Build-system -------------

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"
